@@ -1,6 +1,6 @@
 Package: kfreebsd-image-@version@-@abiname@-@flavor@
 Architecture: any-@arch@
-Depends: freebsd-utils (>= 5), kldutils (>= 7.1), ${misc:Depends}
+Depends: freebsd-utils (>= 8.2+ds1-1), kldutils (>= 7.1), ${misc:Depends}
 Conflicts: kfreebsd-loader (<< 5.4-1.3)
 Provides: kfreebsd-image-@major@, kfreebsd-image
 Recommends: @recommends@
