@@ -126,37 +126,57 @@
  device		firmware	# firmware assist module
  
  # The `bpf' device enables the Berkeley Packet Filter.
-@@ -307,7 +287,6 @@
- device		ulpt		# Printer
+@@ -301,39 +281,9 @@
+ device		ehci		# EHCI PCI->USB interface (USB 2.0)
+ device		xhci		# XHCI PCI->USB interface (USB 3.0)
+ device		usb		# USB Bus (required)
+-#device		udbp		# USB Double Bulk Pipe devices (needs netgraph)
+-device		uhid		# "Human Interface Devices"
+ device		ukbd		# Keyboard
+-device		ulpt		# Printer
  device		umass		# Disks/Mass storage - Requires scbus and da
  device		ums		# Mouse
 -device		urio		# Diamond Rio 500 MP3 player
- # USB Serial devices
- device		u3g		# USB-based 3G modems (Option, Huawei, Sierra)
- device		uark		# Technologies ARK3116 based serial adapters
-@@ -323,17 +302,13 @@
- device		axe		# ASIX Electronics USB Ethernet
- device		cdce		# Generic USB over Ethernet
- device		cue		# CATC USB Ethernet
+-# USB Serial devices
+-device		u3g		# USB-based 3G modems (Option, Huawei, Sierra)
+-device		uark		# Technologies ARK3116 based serial adapters
+-device		ubsa		# Belkin F5U103 and compatible serial adapters
+-device		uftdi		# For FTDI usb serial adapters
+-device		uipaq		# Some WinCE based devices
+-device		uplcom		# Prolific PL-2303 serial adapters
+-device		uslcom		# SI Labs CP2101/CP2102 serial adapters
+-device		uvisor		# Visor and Palm devices
+-device		uvscom		# USB serial support for DDI pocket's PHS
+-# USB Ethernet, requires miibus
+-device		aue		# ADMtek USB Ethernet
+-device		axe		# ASIX Electronics USB Ethernet
+-device		cdce		# Generic USB over Ethernet
+-device		cue		# CATC USB Ethernet
 -device		kue		# Kawasaki LSI USB Ethernet
- device		rue		# RealTek RTL8150 USB Ethernet
- device		udav		# Davicom DM9601E USB
- # USB Wireless
+-device		rue		# RealTek RTL8150 USB Ethernet
+-device		udav		# Davicom DM9601E USB
+-# USB Wireless
 -device		rum		# Ralink Technology RT2501USB wireless NICs
- device		run		# Ralink Technology RT2700/RT2800/RT3000 NICs.
+-device		run		# Ralink Technology RT2700/RT2800/RT3000 NICs.
 -device		uath		# Atheros AR5523 wireless NICs
- device		upgt		# Conexant/Intersil PrismGT wireless NICs.
- device		ural		# Ralink Technology RT2500USB wireless NICs
- device		urtw		# Realtek RTL8187B/L wireless NICs
+-device		upgt		# Conexant/Intersil PrismGT wireless NICs.
+-device		ural		# Ralink Technology RT2500USB wireless NICs
+-device		urtw		# Realtek RTL8187B/L wireless NICs
 -device		zyd		# ZyDAS zb1211/zb1211b wireless NICs
  
  # FireWire support
  device		firewire	# FireWire bus code
-@@ -350,3 +325,11 @@
- device		snd_ich		# Intel, NVidia and other ICH AC'97 Audio
- device		snd_uaudio	# USB Audio
- device		snd_via8233	# VIA VT8233x Audio
-+
+@@ -343,10 +293,10 @@
+ device		dcons		# Dumb console driver
+ device		dcons_crom	# Configuration ROM for dcons
+ 
+-# Sound support
+-device		sound		# Generic sound driver (required)
+-device		snd_es137x	# Ensoniq AudioPCI ES137x
+-device		snd_hda		# Intel High Definition Audio
+-device		snd_ich		# Intel, NVidia and other ICH AC'97 Audio
+-device		snd_uaudio	# USB Audio
+-device		snd_via8233	# VIA VT8233x Audio
 +# Alternate queueing
 +options		ALTQ
 +options		ALTQ_CBQ	# Class Bases Queuing (CBQ)
@@ -305,37 +325,57 @@
  device		firmware	# firmware assist module
  
  # The `bpf' device enables the Berkeley Packet Filter.
-@@ -320,7 +302,6 @@
- device		ulpt		# Printer
+@@ -314,39 +296,9 @@
+ device		ehci		# EHCI PCI->USB interface (USB 2.0)
+ device		xhci		# XHCI PCI->USB interface (USB 3.0)
+ device		usb		# USB Bus (required)
+-#device		udbp		# USB Double Bulk Pipe devices (needs netgraph)
+-device		uhid		# "Human Interface Devices"
+ device		ukbd		# Keyboard
+-device		ulpt		# Printer
  device		umass		# Disks/Mass storage - Requires scbus and da
  device		ums		# Mouse
 -device		urio		# Diamond Rio 500 MP3 player
- # USB Serial devices
- device		u3g		# USB-based 3G modems (Option, Huawei, Sierra)
- device		uark		# Technologies ARK3116 based serial adapters
-@@ -336,17 +317,13 @@
- device		axe		# ASIX Electronics USB Ethernet
- device		cdce		# Generic USB over Ethernet
- device		cue		# CATC USB Ethernet
+-# USB Serial devices
+-device		u3g		# USB-based 3G modems (Option, Huawei, Sierra)
+-device		uark		# Technologies ARK3116 based serial adapters
+-device		ubsa		# Belkin F5U103 and compatible serial adapters
+-device		uftdi		# For FTDI usb serial adapters
+-device		uipaq		# Some WinCE based devices
+-device		uplcom		# Prolific PL-2303 serial adapters
+-device		uslcom		# SI Labs CP2101/CP2102 serial adapters
+-device		uvisor		# Visor and Palm devices
+-device		uvscom		# USB serial support for DDI pocket's PHS
+-# USB Ethernet, requires miibus
+-device		aue		# ADMtek USB Ethernet
+-device		axe		# ASIX Electronics USB Ethernet
+-device		cdce		# Generic USB over Ethernet
+-device		cue		# CATC USB Ethernet
 -device		kue		# Kawasaki LSI USB Ethernet
- device		rue		# RealTek RTL8150 USB Ethernet
- device		udav		# Davicom DM9601E USB
- # USB Wireless
+-device		rue		# RealTek RTL8150 USB Ethernet
+-device		udav		# Davicom DM9601E USB
+-# USB Wireless
 -device		rum		# Ralink Technology RT2501USB wireless NICs
- device		run		# Ralink Technology RT2700/RT2800/RT3000 NICs.
+-device		run		# Ralink Technology RT2700/RT2800/RT3000 NICs.
 -device		uath		# Atheros AR5523 wireless NICs
- device		upgt		# Conexant/Intersil PrismGT wireless NICs.
- device		ural		# Ralink Technology RT2500USB wireless NICs
- device		urtw		# Realtek RTL8187B/L wireless NICs
+-device		upgt		# Conexant/Intersil PrismGT wireless NICs.
+-device		ural		# Ralink Technology RT2500USB wireless NICs
+-device		urtw		# Realtek RTL8187B/L wireless NICs
 -device		zyd		# ZyDAS zb1211/zb1211b wireless NICs
  
  # FireWire support
  device		firewire	# FireWire bus code
-@@ -363,3 +340,11 @@
- device		snd_ich		# Intel, NVidia and other ICH AC'97 Audio
- device		snd_uaudio	# USB Audio
- device		snd_via8233	# VIA VT8233x Audio
-+
+@@ -356,10 +308,10 @@
+ device		dcons		# Dumb console driver
+ device		dcons_crom	# Configuration ROM for dcons
+ 
+-# Sound support
+-device		sound		# Generic sound driver (required)
+-device		snd_es137x	# Ensoniq AudioPCI ES137x
+-device		snd_hda		# Intel High Definition Audio
+-device		snd_ich		# Intel, NVidia and other ICH AC'97 Audio
+-device		snd_uaudio	# USB Audio
+-device		snd_via8233	# VIA VT8233x Audio
 +# Alternate queueing
 +options		ALTQ
 +options		ALTQ_CBQ	# Class Bases Queuing (CBQ)
