@@ -5,8 +5,11 @@ kfreebsd-9 (9.0~svn223502-2) UNRELEASED; urgency=low
     symlink to header package.
   * Require either libsbuf-dev or kfreebsd-kernel-headers that provides
     a valid <sys/sbuf.h>.
+  * Remove drivers for USB devices from kernel, now that devd autoloads them.
+    Remove drivers for PCI sound devices as well, also autoloaded by devd and
+    which weren't present in kfreebsd-8 anyway.
 
- -- Robert Millan <rmh@debian.org>  Tue, 28 Jun 2011 18:38:14 +0200
+ -- Robert Millan <rmh@debian.org>  Wed, 29 Jun 2011 13:10:28 +0200
 
 kfreebsd-9 (9.0~svn223502-1) experimental; urgency=low
 
